--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     ]
   },
   "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    },
     "parserOptions": {
       "ecmaVersion": 2020,
       "ecmaFeatures": {
